# tinypw

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  sonar-project.properties
.github/workflows/: ci.yml
src/: faulty.rs  main.rs  password.rs  password_test.rs
